# stereodemo

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build_release.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: unit_tests.yml
datasets/drivingstereo/: README.md  convert_kitti_calib.py
datasets/drivingstereo/2018-07-11-14-48-52/: 2018-07-11-14-48-52.txt  stereodemo_calibration.json
datasets/eth3d_lowres/: README.md  convert_calib_txt.py  imgui.ini
datasets/eth3d_lowres/delivery_area_1l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/delivery_area_2l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/electro_1l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/electro_2l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/electro_3l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/forest_2s/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/playground_1l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/playground_2l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/playground_3l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/terrains_1l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/eth3d_lowres/terrains_2l/: calib.txt  cameras.txt  images.txt  stereodemo_calibration.json
datasets/kitti2015/: README.md  stereo_calibration.json
datasets/middlebury_2014/: README.md  convert_calib_txt.py
datasets/middlebury_2014/Piano-imperfect/: calib.txt  stereodemo_calibration.json
datasets/middlebury_2014/Pipes-imperfect/: calib.txt  stereodemo_calibration.json
datasets/middlebury_2014/Playtable-imperfect/: calib.txt  stereodemo_calibration.json
datasets/oak-d/: README.md  stereodemo_calibration.json
datasets/opencv-sample/: README.md  stereodemo_calibration.json
datasets/sceneflow/: README.md  stereodemo_calibration.json
stereodemo/: __init__.py  __main__.py  capture_oakd_frames.py  chang_realtime_stereo.py  chang_realtime_stereo_onnx.py  cre_stereo.py  hitnet_stereo.py  main.py  method_chang_realtime_stereo.py  method_cre_stereo.py  method_dist_depth.py  method_hitnet.py  method_opencv_bm.py  method_raft_stereo.py  method_sttr.py  methods.py  oakd_source.py  raft_stereo.py  utils.py  visualizer.py
tests/: test_methods.py
tools/: chang_realtimestereo_to_torchscript_onnx.py
