[metadata]
# replace with your username:
name = stereodemo
version = 0.1
author = Nicolas Burrus
author_email = nicolas@burrus.name
description = Test various stereo algorithms on images or on OAK-D cameras.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nburrus/stereodemo
project_urls =
    Bug Tracker = https://github.com/nburrus/stereodemo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
# This might be conflicting with options.package_data and the MANIFEST.in
# https://stackoverflow.com/questions/7522250/how-to-include-package-data-with-setuptools-distutils
include_package_data = True
setup_requires = setuptools_git
install_requires =
    numpy
    onnxruntime
    opencv-python
    open3d

[options.entry_points]
console_scripts =
    stereodemo = stereodemo:main
