[metadata]
# replace with your username:
name = stereodemo
version = 0.3
author = Nicolas Burrus
author_email = nicolas@burrus.name
description = Compare various stereo depth estimation algorithms on image files or with an OAK-D camera.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nburrus/stereodemo
project_urls =
    Bug Tracker = https://github.com/nburrus/stereodemo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
# This might be conflicting with options.package_data and the MANIFEST.in
# https://stackoverflow.com/questions/7522250/how-to-include-package-data-with-setuptools-distutils
include_package_data = True
setup_requires = setuptools_git
install_requires =
    numpy
    onnxruntime; sys_platform == "darwin"
    onnxruntime-gpu; sys_platform != "darwin"
    opencv-python
    open3d
    torch
    torchvision

[options.entry_points]
console_scripts =
    stereodemo = stereodemo:main
