[metadata]
# replace with your username:
name = stereodemo
version = 0.6
author = Nicolas Burrus
author_email = nicolas@burrus.name
description = Compare various stereo depth estimation algorithms on image files or with an OAK-D camera.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nburrus/stereodemo
project_urls =
    Bug Tracker = https://github.com/nburrus/stereodemo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
# This might be conflicting with options.package_data and the MANIFEST.in
# https://stackoverflow.com/questions/7522250/how-to-include-package-data-with-setuptools-distutils
include_package_data = False
setup_requires = setuptools_git
install_requires =
    numpy
    onnxruntime >= 1.10.0; sys_platform == "darwin"
    onnxruntime-gpu >= 1.10.0; sys_platform != "darwin"
    opencv-python
    open3d >= 0.15.1
    torch >= 1.11.0 # previous version untested, might work?
    torchvision

[options.entry_points]
console_scripts =
    stereodemo = stereodemo:main

[options.package_data]
    # This relies on a symlink to datasets existing under stereodemo/
    # This is done by build_release.sh
    stereodemo = datasets/oak-d/*.png, datasets/oak-d/*.json
